# docs/swagger.yaml
@@ -764,6 +764,39 @@ info:
   title: DevScope中间件
   version: v1.0.0
 paths:
+  /domain/list:
+    get:
+      consumes:
+      - application/json
+      description: 获取开发者领域排名
+      parameters:
+      - description: 领域UUID
+        in: query
+        name: domain_uuid
+        required: true
+        type: string
+      - description: 页码（默认：1）
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量（默认：10）
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.RankListResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.OperationResp'
+      summary: 获取开发者领域排名
+      tags:
+      - Domain
   /domain/users:
     get:
       consumes:
