# handler/domain.go
@@ -21,7 +21,6 @@ import (
 //	@Failure		400			{object}	model.OperationResp
 //	@Router			/domain/users [get]
 func GetUsernameListByTagHandler(c *fiber.Ctx) error {
-
 	tag_uuid := c.Query("uuid")
 	page := c.QueryInt("page", 1)
 	pageSize := c.QueryInt("pageSize", 10)
@@ -44,5 +43,44 @@ func GetUsernameListByTagHandler(c *fiber.Ctx) error {
 	return c.JSON(model.UsernameListResp{
 		Code: 200,
 		List: uname_list,
+	})
+}
+
+// GetUserRankListByDomainHandler godoc
+//
+//	@Summary		获取开发者领域排名
+//	@Description	获取开发者领域排名
+//	@Tags			Domain
+//	@Accept			json
+//	@Produce		json
+//	@Param			domain_uuid	query		string	true	"领域UUID"
+//	@Param			page		query		int		false	"页码（默认：1）"
+//	@Param			pageSize	query		int		false	"每页数量（默认：10）"
+//	@Success		200			{object}	model.RankListResp
+//	@Failure		400			{object}	model.OperationResp
+//	@Router			/domain/list [get]
+func GetUserRankListByDomainHandler(c *fiber.Ctx) error {
+	// 获取参数
+	domain_uuid := c.Query("domain_uuid")
+	page := c.QueryInt("page", 1)
+	pageSize := c.QueryInt("pageSize", 10)
+	if domain_uuid == "" {
+		return c.JSON(model.OperationResp{
+			Code: 400,
+			Msg:  "domain is empty",
+		})
+	}
+
+	ranks, err := method.GetUserRankListByTagUUID(domain_uuid, page, pageSize)
+	if err != nil {
+		return c.JSON(model.OperationResp{
+			Code: 400,
+			Msg:  err.Error(),
+		})
+	}
+
+	return c.JSON(model.RankListResp{
+		Code: 200,
+		List: ranks,
 	})
 }
